Convert to use CMake

--- a/.gitignore
+++ b/.gitignore
@@ -30,5 +30,15 @@
 # Debug files
 *.dSYM/
 
+# CMake stuff
+build
+CMakeCache.txt
+CMakeFiles
+CMakeScripts
+Makefile
+cmake_install.cmake
+install_manifest.txt
+
 # Project specific
-example
+local
+
